--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "express": "^4.13.3",
     "kraken-js": "^2.0.0-rc.1",
-    "sub-app": "file:sub-app"
+    "sub": "./sub-app"
   },
   "devDependencies": {},
   "scripts": {
+    "sub": "sub-app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jean-Charles Sisk <jeancharles@paypal.com>",
